--- a/index.html
+++ b/index.html
@@ -731,6 +731,23 @@ const CARD_DATA = {
       "문의 라인 분리 운영으로 대응 속도 확보"
     ]
   },
+  card9:{
+    title:"RIO",
+    code:"OPOP",
+    link:"https://rio2.casino/?b=OPOP",
+    telegram:"Aven47",
+    benefit:"카지노 입플,USDT무기명,고액전용",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"추천",
+    badgeText:"추천",
+    badgeCls:"rec",
+    priority:"normal",
+    reasons:[
+      "신규/매충/페이백 등 보너스 구성이 강함",
+      "스포츠/미니게임/카지노 유저 전환이 빠름",
+      "문의 라인 분리 운영으로 대응 속도 확보"
+    ]
+  },
 
   /* ✅ 광고 모집(자리) — 카드7/8 */
   card7:{
@@ -1435,7 +1452,9 @@ let marginMode = "2";
     reasons:["원화/USDT 선택 가능 (무기명)", "페이백 비중이 높은 편", "고액 유저 기준 검증 진행"]});
   set("card6", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
     reasons:["신규/매충/페이백 조합", "단기 이벤트보다 유지형 구성", "문의 라인이 명확"]});
-
+  set("card9", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+    reasons:["고액전용 혜택", "단기 이벤트보다 유지형 구성", "문의 라인이 명확"]});
+  
   set("card7", {tag:"ad", badgeText:"광고", badgeCls:"ad", priority:"ad", recruit:true,
     reasons:["광고 문의 전용", "배너/카드/문구 협의 가능", "텔레그램 @UZU59 로만 진행"]});
   set("card8", {tag:"ad", badgeText:"광고", badgeCls:"ad", priority:"ad", recruit:true,
