--- a/index.html
+++ b/index.html
@@ -748,6 +748,40 @@ const CARD_DATA = {
       "문의 라인 분리 운영으로 대응 속도 확보"
     ]
   },
+  card10:{
+    title:"RED HULK",
+    code:"HERO",
+    link:"https://rhk-777.com/",
+    telegram:"SDTR8",
+    benefit:"스포츠입플,가입즉시카지노:1%슬롯3%콤프지급,고액전용",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"추천",
+    badgeText:"추천",
+    badgeCls:"rec",
+    priority:"normal",
+    reasons:[
+      "신규/매충/페이백 등 보너스 구성이 강함",
+      "카지노/슬롯 유저 가입즉시 카지노:1% 슬롯3% 콤프",
+      "문의 라인 분리 운영으로 대응 속도 확보"
+    ]
+  },
+  card11:{
+    title:"TOP GUN",
+    code:"GAS7",
+    link:"https://topgun-88.com/",
+    telegram:"SDTR8",
+    benefit:"스포츠입플,가입즉시카지노:1%슬롯3%콤프지급,고액전용",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"추천",
+    badgeText:"추천",
+    badgeCls:"rec",
+    priority:"normal",
+    reasons:[
+      "신규/매충/페이백 등 보너스 구성이 강함",
+      "카지노/슬롯 유저 가입즉시 카지노:1% 슬롯3% 콤프",
+      "문의 라인 분리 운영으로 대응 속도 확보"
+    ]
+  },
 
   /* ✅ 광고 모집(자리) — 카드7/8 */
   card7:{
@@ -1454,6 +1488,10 @@ let marginMode = "2";
     reasons:["신규/매충/페이백 조합", "단기 이벤트보다 유지형 구성", "문의 라인이 명확"]});
   set("card9", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
     reasons:["고액전용 혜택", "단기 이벤트보다 유지형 구성", "문의 라인이 명확"]});
+  set("card10", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+    reasons:["고액전용 혜택", "가입즉시 1%/3% 콤프지급 ", "안전 라인"]});
+  set("card11", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+    reasons:["고액전용 혜택", "가입즉시 1%/3% 콤프지급 ", "안전 라인"]});
   
   set("card7", {tag:"ad", badgeText:"광고", badgeCls:"ad", priority:"ad", recruit:true,
     reasons:["광고 문의 전용", "배너/카드/문구 협의 가능", "텔레그램 @UZU59 로만 진행"]});
