--- a/index.html
+++ b/index.html
@@ -782,6 +782,23 @@ const CARD_DATA = {
       "문의 라인 분리 운영으로 대응 속도 확보"
     ]
   },
+  card12:{
+    title:"루나 소통방",
+    code:" ",
+    link:"https://t.me/+HK9ffb24gcIzYjc1",
+    telegram:"YUMEKO_S2",
+    benefit:"배팅비/기프티콘 등 다양한 이벤트 ",
+    notice:"무단 홍보시 제제 ",
+    tag:"광고",
+    badgeText:"광고",
+    badgeCls:"rec",
+    priority:"normal",
+    reasons:[
+      "배팅비/기프트 등 다양한 이벤트 진행",
+      "텔레그램 소통방",
+      "문의 라인 분리 운영으로 대응 속도 확보"
+    ]
+  },
 
   /* ✅ 광고 모집(자리) — 카드7/8 */
   card7:{
@@ -1492,6 +1509,8 @@ let marginMode = "2";
     reasons:["고액전용 혜택", "가입즉시 1%/3% 콤프지급 ", "안전 라인"]});
   set("card11", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
     reasons:["고액전용 혜택", "가입즉시 1%/3% 콤프지급 ", "안전 라인"]});
+  set("card11", {tag:"new", badgeText:"광고", badgeCls:"new", priority:"normal",
+    reasons:["텔레그램 소통방", "배팅비/기프트 지원 이벤트 ", "다양한 이벤트 "]});
   
   set("card7", {tag:"ad", badgeText:"광고", badgeCls:"ad", priority:"ad", recruit:true,
     reasons:["광고 문의 전용", "배너/카드/문구 협의 가능", "텔레그램 @UZU59 로만 진행"]});
