--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ const CARD_DATA = {
     ]
   },
   card12:{
-    title:"루나 소통방",
+    title:"루나 ",
     code:" ",
     link:"https://t.me/+HK9ffb24gcIzYjc1",
     telegram:"YUMEKO_S2",
@@ -791,8 +791,8 @@ const CARD_DATA = {
     notice:"무단 홍보시 제제 ",
     tag:"광고",
     badgeText:"광고",
-    badgeCls:"rec",
-    priority:"normal",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "배팅비/기프트 등 다양한 이벤트 진행",
       "텔레그램 소통방",
