--- a/index.html
+++ b/index.html
@@ -636,10 +636,10 @@ const CARD_DATA = {
     telegram:"UZU59",
     benefit:"고액전용 USDT 무기명가입 수수료지원 / 모든게임 입금플러스",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"high",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "고액 유저 기준 검증 + 운영 안정성 우선",
       "입금플러스/수수료 지원 등 혜택 조건 명확",
@@ -653,10 +653,10 @@ const CARD_DATA = {
     telegram:"UZU59",
     benefit:"고액전용 미겜 첫충 5% / 페이백 5% / 출석 30만원",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"high",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "미니게임/스포츠 동시 이용 유저 비중 높음",
       "첫충/페이백 등 보너스 구조가 깔끔",
@@ -670,10 +670,10 @@ const CARD_DATA = {
     telegram:"UZU59",
     benefit:"스포츠 첫 10% / 미겜 첫 5% / 페이백 5%",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"신규",
-    badgeText:"신규",
-    badgeCls:"new",
-    priority:"high",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "스포츠/미니게임 밸런스형 혜택 구성",
       "가입코드 기준 혜택 적용 정책 명확",
@@ -687,10 +687,10 @@ const CARD_DATA = {
     telegram:"UZU59",
     benefit:"스포츠·미겜 입플 최대 30% / 카지노 입플",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"검증",
-    badgeText:"검증",
-    badgeCls:"verified",
-    priority:"normal",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "카지노/슬롯 이용 유저 전환이 높음",
       "입플/보너스 조건 공지 및 적용 라인 명확",
@@ -704,10 +704,10 @@ const CARD_DATA = {
     telegram:"PSC991",
     benefit:"원화·USDT 무기명가입 / 페이백 10%",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"고액",
-    badgeText:"고액",
-    badgeCls:"gold",
-    priority:"normal",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "무기명/USDT 등 고액 동선에 강점",
       "페이백 등 리베이트 성격 혜택 제공",
@@ -721,10 +721,10 @@ const CARD_DATA = {
     telegram:"DY0302",
     benefit:"신규 30% / 매충 10% / 페이백 10%",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"normal",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "신규/매충/페이백 등 보너스 구성이 강함",
       "미니게임/카지노 유저 전환이 빠름",
@@ -738,10 +738,10 @@ const CARD_DATA = {
     telegram:"Aven47",
     benefit:"카지노 입플,USDT무기명,고액전용",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"normal",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "신규/매충/페이백 등 보너스 구성이 강함",
       "스포츠/미니게임/카지노 유저 전환이 빠름",
@@ -755,10 +755,10 @@ const CARD_DATA = {
     telegram:"SDTR8",
     benefit:"스포츠입플,가입즉시카지노:1%슬롯3%콤프지급,고액전용",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"normal",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "신규/매충/페이백 등 보너스 구성이 강함",
       "카지노/슬롯 유저 가입즉시 카지노:1% 슬롯3% 콤프",
@@ -772,10 +772,10 @@ const CARD_DATA = {
     telegram:"SDTR8",
     benefit:"스포츠입플,가입즉시카지노:1%슬롯3%콤프지급,고액전용",
     notice:"가입코드 미입력 시 혜택 적용 불가",
-    tag:"추천",
-    badgeText:"추천",
-    badgeCls:"rec",
-    priority:"normal",
+    tag:"광고",
+    badgeText:"인증",
+    badgeCls:"ad",
+    priority:"ad",
     reasons:[
       "신규/매충/페이백 등 보너스 구성이 강함",
       "카지노/슬롯 유저 가입즉시 카지노:1% 슬롯3% 콤프",
@@ -1491,25 +1491,25 @@ let marginMode = "2";
 (function enrichCards(){
   const set = (id, patch)=>{ CARD_DATA[id] = Object.assign({tag:"rec", badgeText:"추천", badgeCls:"rec"}, CARD_DATA[id], patch); };
 
-  set("card1", {tag:"rec", badgeText:"추천", badgeCls:"rec", priority:"high",
+  set("card1", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"high",
     reasons:["고액 유저 기준으로 선별된 운영 이력", "입플/수수료 지원 등 조건이 명확", "문의/대응 채널이 고정(텔레그램)"]});
-  set("card2", {tag:"rec", badgeText:"추천", badgeCls:"rec", priority:"high",
+  set("card2", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"high",
     reasons:["고액전용 혜택(첫충/페이백) 구성", "출석/리워드 등 유지형 혜택", "이용 문의 대응 라인이 명확"]});
-  set("card3", {tag:"rec", badgeText:"추천", badgeCls:"rec", priority:"high",
+  set("card3", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"high",
     reasons:["스포츠/미겜 첫충 + 페이백 구조", "조건/가입코드 안내가 명확", "커뮤니티 피드백 반영 운영"]});
-  set("card4", {tag:"rec", badgeText:"추천", badgeCls:"rec", priority:"normal",
+  set("card4", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["입플 폭이 넓어 선택지가 많음", "스포츠·미겜·카지노 혜택 분리", "문의/이슈 처리 채널 고정"]});
-  set("card5", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+  set("card5", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["원화/USDT 선택 가능 (무기명)", "페이백 비중이 높은 편", "고액 유저 기준 검증 진행"]});
-  set("card6", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+  set("card6", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["신규/매충/페이백 조합", "단기 이벤트보다 유지형 구성", "문의 라인이 명확"]});
-  set("card9", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+  set("card9", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["고액전용 혜택", "단기 이벤트보다 유지형 구성", "문의 라인이 명확"]});
-  set("card10", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+  set("card10", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["고액전용 혜택", "가입즉시 1%/3% 콤프지급 ", "안전 라인"]});
-  set("card11", {tag:"new", badgeText:"신규", badgeCls:"new", priority:"normal",
+  set("card11", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["고액전용 혜택", "가입즉시 1%/3% 콤프지급 ", "안전 라인"]});
-  set("card12", {tag:"ad", badgeText:"광고", badgeCls:"ad", priority:"normal",
+  set("card12", {tag:"ad", badgeText:"인증", badgeCls:"ad", priority:"normal",
     reasons:["텔레그램 소통방", "배팅비/기프트 지원 이벤트 ", "다양한 이벤트 "]});
   
   set("card7", {tag:"ad", badgeText:"광고", badgeCls:"ad", priority:"ad", recruit:true,
