--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ const CARD_DATA = {
     notice:"가입코드 미입력 시 혜택 적용 불가",
     tag:"광고",
     badgeText:"인증",
-    badgeCls:"ad",
+    badgeCls:"인증",
     priority:"ad",
     reasons:[
       "고액 유저 기준 검증 + 운영 안정성 우선",
