--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@ const CARD_DATA = {
     benefit:"고액전용 USDT 무기명가입 수수료지원 / 모든게임 입금플러스",
     notice:"가입코드 미입력 시 혜택 적용 불가",
     tag:"광고",
-    badgeText:"인증",
-    badgeCls:"인증",
+    badgeText:"88",
+    badgeCls:"ad",
     priority:"ad",
     reasons:[
       "고액 유저 기준 검증 + 운영 안정성 우선",
