--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -1,89 +1,280 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>고액 유저 보증업체 선택 가이드 | 88(팔팔커뮤니티)</title>
-  <meta name="description" content="고액 유저 기준으로 보증업체(검증 업체)를 고를 때 확인해야 할 안전 체크리스트와 88 인증 놀이터 운영 기준을 안내합니다.">
-  <meta name="keywords" content="보증업체,검증업체,고액유저,출금,안전">
-  <link rel="canonical" href="https://88st.cloud/landing-b/">
-  <meta name="robots" content="index,follow">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터</title>
+<meta name="description" content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요.">
+<link rel="canonical" href="https://88st.cloud/landing-b/">
+<meta name="robots" content="index,follow">
 
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)">
-  <meta property="og:title" content="고액 유저 보증업체 선택 가이드 | 88(팔팔커뮤니티)">
-  <meta property="og:description" content="고액 유저 기준으로 보증업체(검증 업체)를 고를 때 확인해야 할 안전 체크리스트와 88 인증 놀이터 운영 기준을 안내합니다.">
-  <meta property="og:url" content="https://88st.cloud/landing-b/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="88 (팔팔커뮤니티)">
+<meta property="og:title" content="고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터">
+<meta property="og:description" content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요.">
+<meta property="og:url" content="https://88st.cloud/landing-b/">
 
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-  <style>
-    *{box-sizing:border-box}
-    :root{--bg:#0b0b0b;--panel:#121212;--gold:#d4af37;--gold2:#f5e27a;--muted:#cfcfcf}
-    body{
-      margin:0;
-      background:
-        radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
-        radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
-        linear-gradient(180deg, #07070a, var(--bg));
-      font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
-      color:#fff;
-    }
-    .wrap{max-width:920px;margin:0 auto;padding:18px 14px 28px}
-    .top{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
-    .brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:#fff}
-    .brand img{width:42px;height:42px;object-fit:contain;filter: drop-shadow(0 0 12px rgba(212,175,55,.22));}
-    .brand strong{font-weight:900}
-    .nav{display:flex;gap:10px;flex-wrap:wrap}
-    .btn{display:inline-block;padding:10px 12px;border-radius:12px;font-weight:900;text-decoration:none}
-    .btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-    .btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#0b0b0b}
-    .panel{margin-top:14px;background:rgba(18,18,18,.85);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.45);backdrop-filter: blur(10px);}
-    h1{margin:0 0 10px;font-size:20px;font-weight:900;color:var(--gold2);}
-    p{margin:10px 0;color:var(--muted);line-height:1.65;font-size:14px}
-    ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.65}
-    .faq{margin-top:14px}
-    .faq h2{margin:0 0 10px;font-size:14px;font-weight:900;color:var(--gold2)}
-    details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
-    details+details{margin-top:10px}
-    summary{cursor:pointer;font-weight:900;list-style:none}
-    summary::-webkit-details-marker{display:none}
-    .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
-    .foot{margin-top:18px;color:#9a9a9a;font-size:12px;line-height:1.55}
-  </style>
+<!-- GA4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+
+// ===== GA4 =====
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+
+// ===== UTM 저장/전파 =====
+function getUrlParams(){
+  const p = new URLSearchParams(location.search);
+  const obj = {};
+  ["utm_source","utm_medium","utm_campaign","utm_content","utm_term"].forEach(k=>{
+    const v = p.get(k);
+    if(v) obj[k]=v;
+  });
+  return obj;
+}
+function saveUtmFromUrl(){
+  const utm = getUrlParams();
+  const keys = Object.keys(utm);
+  if(!keys.length) return;
+  try{
+    localStorage.setItem("88_utm_last", JSON.stringify({...utm, ts: Date.now()}));
+  }catch(e){}
+}
+function getUtmQuery(){
+  try{
+    const raw = localStorage.getItem("88_utm_last");
+    if(!raw) return "";
+    const d = JSON.parse(raw);
+    const parts = [];
+    ["utm_source","utm_medium","utm_campaign","utm_content","utm_term"].forEach(k=>{
+      if(d && d[k]) parts.push(`${k}=${encodeURIComponent(d[k])}`);
+    });
+    return parts.length ? ("?" + parts.join("&")) : "";
+  }catch(e){ return ""; }
+}
+function appendUtm(href){
+  if(!href) return href;
+  // 외부링크 제외
+  if(/^https?:\/\//i.test(href)) return href;
+  // 앵커만 있는 경우
+  if(href.startsWith("#")) return href;
+  const q = getUtmQuery();
+  if(!q) return href;
+  // 이미 쿼리가 있으면 유지
+  if(href.includes("?")) return href;
+  // hash가 있으면 앞에 붙이기
+  const [path, hash] = href.split("#");
+  return path + q + (hash ? ("#" + hash) : "");
+}
+function bindUtmToLinks(){
+  document.querySelectorAll("a[data-utm='1']").forEach(a=>{
+    a.setAttribute("href", appendUtm(a.getAttribute("href")));
+  });
+}
+
+// ===== 이벤트 트래킹 =====
+function track(eventName, params){
+  try{
+    if(typeof gtag === "function") gtag("event", eventName, params || {});
+  }catch(e){}
+}
+
+saveUtmFromUrl();
+document.addEventListener("DOMContentLoaded", ()=>{
+  bindUtmToLinks();
+});
+
+gtag('js', new Date());
+gtag('config', 'G-KWT87FBY6S', { 'send_page_view': true });
+</script>
+
+<style>
+
+*{box-sizing:border-box;}
+:root{
+  --bg:#0b0b0b;
+  --panel:rgba(18,18,18,.88);
+  --gold:#d4af37;
+  --gold2:#f5e27a;
+  --muted:#cfcfcf;
+  --line:rgba(255,255,255,.08);
+}
+html{scroll-behavior:smooth;}
+body{
+  margin:0;
+  background:
+    radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
+    radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
+    linear-gradient(180deg, #07070a, var(--bg));
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+  color:#fff;
+}
+a{color:inherit;text-decoration:none;}
+.notice{
+  position:sticky; top:0; z-index:1000;
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#000; font-weight:900; font-size:13px;
+  padding:10px 12px; text-align:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+.wrap{max-width:980px;margin:0 auto;padding:16px 14px 36px;}
+.top{
+  display:flex; align-items:center; justify-content:space-between;
+  gap:12px; padding:10px 0 14px;
+}
+.brand{display:flex; align-items:center; gap:10px;}
+.brand img{width:46px;height:46px;object-fit:contain;filter:drop-shadow(0 0 12px rgba(212,175,55,.22));}
+.brand .t{font-weight:900; letter-spacing:.2px;}
+.nav{display:flex; gap:8px; flex-wrap:wrap; justify-content:flex-end;}
+.nav a{
+  font-size:12px; font-weight:900;
+  padding:8px 10px; border-radius:999px;
+  border:1px solid var(--line); background:rgba(0,0,0,.22);
+}
+.hero{
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:18px 16px;
+  box-shadow:0 10px 26px rgba(0,0,0,.45);
+  backdrop-filter: blur(10px);
+}
+.h1{margin:0; font-size:20px; font-weight:1000; line-height:1.25;}
+.sub{margin-top:8px; color:var(--muted); font-size:13px; line-height:1.6;}
+.pills{display:flex; flex-wrap:wrap; gap:8px; margin-top:12px;}
+.pill{
+  font-size:12px; font-weight:900;
+  padding:6px 10px; border-radius:999px;
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.22);
+  color:#f0f0f0;
+}
+.ctaRow{display:grid; gap:10px; margin-top:14px;}
+@media(min-width:720px){ .ctaRow{grid-template-columns:1fr 1fr;} }
+.btn{
+  display:block; text-align:center;
+  padding:14px 14px; border-radius:16px;
+  font-weight:1000; letter-spacing:.2px;
+  border:1px solid transparent;
+}
+.btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff); color:#00121a;}
+.btn.secondary{background:linear-gradient(135deg,var(--gold),var(--gold2)); color:#0b0b0b;}
+.note{margin-top:8px; font-size:12px; color:#a7a7a7; line-height:1.55;}
+.section{
+  margin-top:14px;
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:14px;
+  box-shadow:0 10px 26px rgba(0,0,0,.45);
+  backdrop-filter: blur(10px);
+}
+.title{
+  font-weight:1000;
+  font-size:14px;
+  color:var(--gold2);
+  margin:0 0 8px;
+}
+.content{
+  color:var(--muted);
+  font-size:13px;
+  line-height:1.65;
+}
+.ul{margin:10px 0 0; padding-left:18px; color:var(--muted); font-size:13px; line-height:1.65;}
+.faq details{
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.22);
+  border-radius:14px;
+  padding:10px 12px;
+}
+.faq details + details{margin-top:10px;}
+.faq summary{
+  cursor:pointer; font-weight:1000; color:#fff; list-style:none;
+}
+.faq summary::-webkit-details-marker{display:none;}
+.faq .a{margin-top:8px; color:#cfcfcf; font-size:13px; line-height:1.6;}
+.footer{
+  margin-top:16px;
+  color:#9a9a9a;
+  font-size:12px;
+  text-align:center;
+}
+.smallLinks{
+  margin-top:10px;
+  display:flex; flex-wrap:wrap; gap:8px; justify-content:center;
+}
+.smallLinks a{
+  font-size:11px; color:#9a9a9a;
+  padding:6px 8px; border-radius:10px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.06);
+}
+.smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
+
+</style>
 </head>
 <body>
+  <div class="notice">
+    <a href="/?from=landing-b" data-utm="1" onclick="track('landing_notice_click',{landing:'b'})">🧾 고액 유저 검증 체크리스트 → 메인 ‘88 인증놀이터’에서 카드로 바로 확인</a>
+  </div>
+
   <div class="wrap">
     <div class="top">
-      <a class="brand" href="/" aria-label="88 메인으로 이동">
+      <div class="brand">
         <img src="/img/logo.png" alt="88 로고" loading="lazy" decoding="async">
-        <strong>88 (팔팔커뮤니티)</strong>
-      </a>
+        <div class="t">88st.cloud</div>
+      </div>
       <div class="nav">
-        <a class="btn primary" href="/analysis/">분석기 바로가기</a>
-        <a class="btn gold" href="/#vendorTop">인증놀이터 보기</a>
-        <a class="btn" style="background:rgba(255,255,255,.08);color:#fff;border:1px solid rgba(255,255,255,.10)" href="/">메인으로</a>
+        <a href="/" data-utm="1" onclick="track('landing_nav_home',{landing:'b'})">메인</a>
+        <a href="/analysis/" data-utm="1" onclick="track('landing_nav_analyzer',{landing:'b'})">분석기</a>
+        <a href="/#vendorTop" data-utm="1" onclick="track('landing_nav_vendor',{landing:'b'})">인증놀이터</a>
       </div>
     </div>
 
-    <div class="panel">
-      <h1>고액 유저 기준 ‘보증업체’ 체크리스트</h1>
-      <p>보증업체를 고를 때 가장 중요한 건 ‘출금 안정성’과 ‘대응 채널의 일관성’입니다. 이벤트가 화려해도 출금 지연/연락 두절이 잦으면 리스크가 커집니다. 특히 고액 이용자는 작은 변수도 금액으로 확대되니 보수적으로 접근하는 게 안전합니다.</p>
-<p>88 인증 놀이터는 운영 이력, 커뮤니티 피드백, 혜택 조건의 명확성(가입코드/적용 범위), 문의/대응 가능 여부를 중심으로 정리합니다. 단기 이벤트 위주로 급변하는 곳은 제외하는 방향으로 관리합니다.</p>
-<p>팁: 사칭 계정이 많으니 공식 관리자 텔레그램(@UZU59) 단 하나만 확인하세요. 링크를 받더라도 계정/아이디를 먼저 검증하는 습관이 필요합니다.</p>
+    <div class="hero">
+      <h1 class="h1">고액 유저 기준 ‘보증업체/인증놀이터’ 검증 체크리스트</h1>
+      <div class="sub">광고 문구보다 ‘운영 이력·조건 명확성·문의 응대’가 중요합니다. 빠르게 체크하고 메인에서 카드별 안내를 확인하세요.</div>
 
-      <div class="faq">
-        <h2>FAQ</h2>
-        <details><summary>보증업체는 무엇을 보증하나요?</summary><div class="a">‘무조건 안전’의 의미가 아니라, 운영 이력/대응 채널/커뮤니티 검증 정보를 바탕으로 상대적으로 리스크가 낮은 곳을 선별해 안내한다는 의미에 가깝습니다.</div></details>
-<details><summary>고액 유저는 어떤 점을 추가로 봐야 하나요?</summary><div class="a">한도/출금 속도/정산 방식, 고객센터 대응 시간대, 이슈 발생 시 처리 기록(커뮤니티 피드백)을 더 꼼꼼히 확인하는 게 좋습니다.</div></details>
-<details><summary>사칭을 피하려면 어떻게 하나요?</summary><div class="a">공식 계정 아이디를 고정으로 외워두고, 링크 클릭 전 ‘아이디가 정확히 일치하는지’부터 확인하세요.</div></details>
+      <div class="pills">
+        <div class="pill">고액 유저 기준</div><div class="pill">검증 체크리스트</div><div class="pill">운영 이력</div><div class="pill">문의 채널</div><div class="pill">리스크 감소</div>
       </div>
 
-      <div class="foot">
-        ※ 본 페이지의 안내/도구 결과는 참고용이며, 최종 판단과 책임은 이용자에게 있습니다.<br>
-        빠른 이동: <a href="/analysis/" style="color:#78d6ff;text-decoration:none;font-weight:900;">분석기</a> ·
-        <a href="/#vendorTop" style="color:#f5e27a;text-decoration:none;font-weight:900;">88 인증 놀이터</a>
+      <div class="ctaRow">
+        <a class="btn primary" href="/analysis/" data-utm="1"
+           onclick="track('landing_cta_click',{landing:'b',cta:'analyzer'})">
+           무료 분석기 사용하기
+        </a>
+        <a class="btn secondary" href="/#vendorTop" data-utm="1"
+           onclick="track('landing_cta_click',{landing:'b',cta:'vendor'})">
+           88 인증놀이터 바로보기
+        </a>
+      </div>
+      <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
+    </div>
+
+    <div class="section">
+      <div class="title">핵심 요약</div>
+      <div class="content">보증업체/인증놀이터 선택에서 가장 큰 리스크는 ‘정보 비대칭’입니다. 고액 유저일수록 작은 조건 차이가 실제 체감(환전 속도·한도·응대 품질)에 크게 영향을 줍니다. 그래서 광고 문구보다 <b>운영 이력</b>, <b>조건의 명확성</b>, <b>문의/대응 라인 고정</b>을 우선으로 봐야 합니다. 88은 커뮤니티 피드백과 운영 히스토리를 기반으로 ‘불필요한 변동(조건 변경, 공지 불명확)’이 잦은 곳을 보수적으로 걸러내고, 카드 클릭 한 번으로 가입코드·혜택·주의사항·문의 채널을 즉시 확인하도록 구성했습니다. 아래 체크리스트를 먼저 보고, 메인에서 카드별 상세 안내를 확인하세요.</div>
+      <ul class="ul">
+        <li>운영 안정성: 장기 운영/커뮤니티 피드백/이슈 대응 이력</li><li>조건 명확성: 입플·페이백·출금 조건이 구체적으로 안내되는지</li><li>고액 동선: 환전/출금 속도, 한도, 절차(본인확인 등) 체크</li><li>문의 채널: 공식 텔레그램 1개로 고정인지(사칭 위험 감소)</li><li>이상 징후: 조건 변경이 잦거나 공지가 불명확하면 보수적으로</li>
+      </ul>
+    </div>
+
+    <div class="section faq">
+      <div class="title">FAQ</div>
+      <details><summary>‘보증’이라는 단어만 믿어도 되나요?</summary><div class='a'>아니요. 핵심은 <b>운영 이력</b>과 <b>조건 명확성</b>입니다. 이름보다 실사용 기준으로 체크하세요.</div></details><details><summary>사칭/가짜 관리자 구분은?</summary><div class='a'>공식 문의 채널을 <b>한 곳으로 고정</b>하고, 메인 공지에 안내된 아이디만 사용하세요.</div></details><details><summary>카드에 없는 업체도 문의 가능한가요?</summary><div class='a'>가능합니다. 다만 검증 기준을 통과하지 못하면 메인 목록에는 반영되지 않을 수 있습니다.</div></details><details><summary>고액 유저가 가장 많이 실수하는 포인트는?</summary><div class='a'>혜택 문구만 보고 들어가서 <b>출금/환전 조건</b>을 늦게 확인하는 경우가 많습니다. 먼저 조건부터 보세요.</div></details>
+    </div>
+
+    <div class="footer">
+      <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
+      <div class="smallLinks">
+        <a href="/landing-a/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'a'})">입플·보너스</a>
+        <a href="/landing-b/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'b'})">고액/보증업체</a>
+        <a href="/landing-c/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'c'})">마진·EV</a>
+        <a href="/landing-d/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'d'})">배당 흐름</a>
       </div>
     </div>
   </div>
