--- a/landing-c/index.html
+++ b/landing-c/index.html
@@ -1,89 +1,280 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>배당 마진·EV 계산 방법 | 88(팔팔커뮤니티)</title>
-  <meta name="description" content="배당 마진(북메이커 수수료)과 EV(기대값)를 이해하는 핵심 개념과 88 도구로 빠르게 확인하는 방법을 정리했습니다.">
-  <meta name="keywords" content="마진,EV,기대값,배당계산,수수료">
-  <link rel="canonical" href="https://88st.cloud/landing-c/">
-  <meta name="robots" content="index,follow">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>배당 마진·EV 계산 가이드 (2-way/3-way) + 무료 분석기 | 88</title>
+<meta name="description" content="배당 마진(오버라운드)과 EV(+EV) 개념을 쉽게 정리하고, 2-way/3-way 입력으로 빠르게 계산하는 무료 분석기 사용법을 안내합니다.">
+<link rel="canonical" href="https://88st.cloud/landing-c/">
+<meta name="robots" content="index,follow">
 
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)">
-  <meta property="og:title" content="배당 마진·EV 계산 방법 | 88(팔팔커뮤니티)">
-  <meta property="og:description" content="배당 마진(북메이커 수수료)과 EV(기대값)를 이해하는 핵심 개념과 88 도구로 빠르게 확인하는 방법을 정리했습니다.">
-  <meta property="og:url" content="https://88st.cloud/landing-c/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="88 (팔팔커뮤니티)">
+<meta property="og:title" content="배당 마진·EV 계산 가이드 (2-way/3-way) + 무료 분석기 | 88">
+<meta property="og:description" content="배당 마진(오버라운드)과 EV(+EV) 개념을 쉽게 정리하고, 2-way/3-way 입력으로 빠르게 계산하는 무료 분석기 사용법을 안내합니다.">
+<meta property="og:url" content="https://88st.cloud/landing-c/">
 
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-  <style>
-    *{box-sizing:border-box}
-    :root{--bg:#0b0b0b;--panel:#121212;--gold:#d4af37;--gold2:#f5e27a;--muted:#cfcfcf}
-    body{
-      margin:0;
-      background:
-        radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
-        radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
-        linear-gradient(180deg, #07070a, var(--bg));
-      font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
-      color:#fff;
-    }
-    .wrap{max-width:920px;margin:0 auto;padding:18px 14px 28px}
-    .top{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
-    .brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:#fff}
-    .brand img{width:42px;height:42px;object-fit:contain;filter: drop-shadow(0 0 12px rgba(212,175,55,.22));}
-    .brand strong{font-weight:900}
-    .nav{display:flex;gap:10px;flex-wrap:wrap}
-    .btn{display:inline-block;padding:10px 12px;border-radius:12px;font-weight:900;text-decoration:none}
-    .btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-    .btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#0b0b0b}
-    .panel{margin-top:14px;background:rgba(18,18,18,.85);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.45);backdrop-filter: blur(10px);}
-    h1{margin:0 0 10px;font-size:20px;font-weight:900;color:var(--gold2);}
-    p{margin:10px 0;color:var(--muted);line-height:1.65;font-size:14px}
-    ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.65}
-    .faq{margin-top:14px}
-    .faq h2{margin:0 0 10px;font-size:14px;font-weight:900;color:var(--gold2)}
-    details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
-    details+details{margin-top:10px}
-    summary{cursor:pointer;font-weight:900;list-style:none}
-    summary::-webkit-details-marker{display:none}
-    .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
-    .foot{margin-top:18px;color:#9a9a9a;font-size:12px;line-height:1.55}
-  </style>
+<!-- GA4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+
+// ===== GA4 =====
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+
+// ===== UTM 저장/전파 =====
+function getUrlParams(){
+  const p = new URLSearchParams(location.search);
+  const obj = {};
+  ["utm_source","utm_medium","utm_campaign","utm_content","utm_term"].forEach(k=>{
+    const v = p.get(k);
+    if(v) obj[k]=v;
+  });
+  return obj;
+}
+function saveUtmFromUrl(){
+  const utm = getUrlParams();
+  const keys = Object.keys(utm);
+  if(!keys.length) return;
+  try{
+    localStorage.setItem("88_utm_last", JSON.stringify({...utm, ts: Date.now()}));
+  }catch(e){}
+}
+function getUtmQuery(){
+  try{
+    const raw = localStorage.getItem("88_utm_last");
+    if(!raw) return "";
+    const d = JSON.parse(raw);
+    const parts = [];
+    ["utm_source","utm_medium","utm_campaign","utm_content","utm_term"].forEach(k=>{
+      if(d && d[k]) parts.push(`${k}=${encodeURIComponent(d[k])}`);
+    });
+    return parts.length ? ("?" + parts.join("&")) : "";
+  }catch(e){ return ""; }
+}
+function appendUtm(href){
+  if(!href) return href;
+  // 외부링크 제외
+  if(/^https?:\/\//i.test(href)) return href;
+  // 앵커만 있는 경우
+  if(href.startsWith("#")) return href;
+  const q = getUtmQuery();
+  if(!q) return href;
+  // 이미 쿼리가 있으면 유지
+  if(href.includes("?")) return href;
+  // hash가 있으면 앞에 붙이기
+  const [path, hash] = href.split("#");
+  return path + q + (hash ? ("#" + hash) : "");
+}
+function bindUtmToLinks(){
+  document.querySelectorAll("a[data-utm='1']").forEach(a=>{
+    a.setAttribute("href", appendUtm(a.getAttribute("href")));
+  });
+}
+
+// ===== 이벤트 트래킹 =====
+function track(eventName, params){
+  try{
+    if(typeof gtag === "function") gtag("event", eventName, params || {});
+  }catch(e){}
+}
+
+saveUtmFromUrl();
+document.addEventListener("DOMContentLoaded", ()=>{
+  bindUtmToLinks();
+});
+
+gtag('js', new Date());
+gtag('config', 'G-KWT87FBY6S', { 'send_page_view': true });
+</script>
+
+<style>
+
+*{box-sizing:border-box;}
+:root{
+  --bg:#0b0b0b;
+  --panel:rgba(18,18,18,.88);
+  --gold:#d4af37;
+  --gold2:#f5e27a;
+  --muted:#cfcfcf;
+  --line:rgba(255,255,255,.08);
+}
+html{scroll-behavior:smooth;}
+body{
+  margin:0;
+  background:
+    radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
+    radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
+    linear-gradient(180deg, #07070a, var(--bg));
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+  color:#fff;
+}
+a{color:inherit;text-decoration:none;}
+.notice{
+  position:sticky; top:0; z-index:1000;
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#000; font-weight:900; font-size:13px;
+  padding:10px 12px; text-align:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+.wrap{max-width:980px;margin:0 auto;padding:16px 14px 36px;}
+.top{
+  display:flex; align-items:center; justify-content:space-between;
+  gap:12px; padding:10px 0 14px;
+}
+.brand{display:flex; align-items:center; gap:10px;}
+.brand img{width:46px;height:46px;object-fit:contain;filter:drop-shadow(0 0 12px rgba(212,175,55,.22));}
+.brand .t{font-weight:900; letter-spacing:.2px;}
+.nav{display:flex; gap:8px; flex-wrap:wrap; justify-content:flex-end;}
+.nav a{
+  font-size:12px; font-weight:900;
+  padding:8px 10px; border-radius:999px;
+  border:1px solid var(--line); background:rgba(0,0,0,.22);
+}
+.hero{
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:18px 16px;
+  box-shadow:0 10px 26px rgba(0,0,0,.45);
+  backdrop-filter: blur(10px);
+}
+.h1{margin:0; font-size:20px; font-weight:1000; line-height:1.25;}
+.sub{margin-top:8px; color:var(--muted); font-size:13px; line-height:1.6;}
+.pills{display:flex; flex-wrap:wrap; gap:8px; margin-top:12px;}
+.pill{
+  font-size:12px; font-weight:900;
+  padding:6px 10px; border-radius:999px;
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.22);
+  color:#f0f0f0;
+}
+.ctaRow{display:grid; gap:10px; margin-top:14px;}
+@media(min-width:720px){ .ctaRow{grid-template-columns:1fr 1fr;} }
+.btn{
+  display:block; text-align:center;
+  padding:14px 14px; border-radius:16px;
+  font-weight:1000; letter-spacing:.2px;
+  border:1px solid transparent;
+}
+.btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff); color:#00121a;}
+.btn.secondary{background:linear-gradient(135deg,var(--gold),var(--gold2)); color:#0b0b0b;}
+.note{margin-top:8px; font-size:12px; color:#a7a7a7; line-height:1.55;}
+.section{
+  margin-top:14px;
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:14px;
+  box-shadow:0 10px 26px rgba(0,0,0,.45);
+  backdrop-filter: blur(10px);
+}
+.title{
+  font-weight:1000;
+  font-size:14px;
+  color:var(--gold2);
+  margin:0 0 8px;
+}
+.content{
+  color:var(--muted);
+  font-size:13px;
+  line-height:1.65;
+}
+.ul{margin:10px 0 0; padding-left:18px; color:var(--muted); font-size:13px; line-height:1.65;}
+.faq details{
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.22);
+  border-radius:14px;
+  padding:10px 12px;
+}
+.faq details + details{margin-top:10px;}
+.faq summary{
+  cursor:pointer; font-weight:1000; color:#fff; list-style:none;
+}
+.faq summary::-webkit-details-marker{display:none;}
+.faq .a{margin-top:8px; color:#cfcfcf; font-size:13px; line-height:1.6;}
+.footer{
+  margin-top:16px;
+  color:#9a9a9a;
+  font-size:12px;
+  text-align:center;
+}
+.smallLinks{
+  margin-top:10px;
+  display:flex; flex-wrap:wrap; gap:8px; justify-content:center;
+}
+.smallLinks a{
+  font-size:11px; color:#9a9a9a;
+  padding:6px 8px; border-radius:10px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.06);
+}
+.smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
+
+</style>
 </head>
 <body>
+  <div class="notice">
+    <a href="/?from=landing-c" data-utm="1" onclick="track('landing_notice_click',{landing:'c'})">📉 마진·EV 계산이 핵심 → 무료 분석기에서 2-way/3-way 바로 계산</a>
+  </div>
+
   <div class="wrap">
     <div class="top">
-      <a class="brand" href="/" aria-label="88 메인으로 이동">
+      <div class="brand">
         <img src="/img/logo.png" alt="88 로고" loading="lazy" decoding="async">
-        <strong>88 (팔팔커뮤니티)</strong>
-      </a>
+        <div class="t">88st.cloud</div>
+      </div>
       <div class="nav">
-        <a class="btn primary" href="/analysis/">분석기 바로가기</a>
-        <a class="btn gold" href="/#vendorTop">인증놀이터 보기</a>
-        <a class="btn" style="background:rgba(255,255,255,.08);color:#fff;border:1px solid rgba(255,255,255,.10)" href="/">메인으로</a>
+        <a href="/" data-utm="1" onclick="track('landing_nav_home',{landing:'c'})">메인</a>
+        <a href="/analysis/" data-utm="1" onclick="track('landing_nav_analyzer',{landing:'c'})">분석기</a>
+        <a href="/#vendorTop" data-utm="1" onclick="track('landing_nav_vendor',{landing:'c'})">인증놀이터</a>
       </div>
     </div>
 
-    <div class="panel">
-      <h1>배당 마진·EV를 ‘초간단’으로 이해하기</h1>
-      <p>배당 마진은 북메이커가 시장에 반영해 둔 ‘수수료’에 가깝습니다. 같은 경기라도 마진이 낮으면(수수료가 적으면) 장기적으로 유리한 가격을 받을 가능성이 커집니다. 2-way(승/패)든 3-way(홈/무/원정)든, 각 배당의 역수(암시확률)를 더하면 마진을 계산할 수 있습니다.</p>
-<p>EV(기대값)는 ‘내가 생각하는 확률’과 ‘제시 배당’의 조합으로 장기 기대수익이 플러스인지 보는 지표입니다. EV가 플러스라고 해서 단기 적중을 보장하진 않지만, 장기 전략에서 중요한 기준이 됩니다.</p>
-<p>88 분석기/마진 계산기는 배당 입력만으로 마진과 참고 확률을 빠르게 보여주도록 구성했습니다. 계산값을 ‘의사결정 참고’로만 쓰고, 뉴스/선발/결장 같은 원인 체크를 반드시 병행하세요.</p>
+    <div class="hero">
+      <h1 class="h1">배당 마진·EV(가치) 계산 가이드</h1>
+      <div class="sub">배당을 ‘확률’로 바꾸고 마진을 제거하면, 같은 경기라도 더 유리한 라인을 찾기 쉬워집니다.</div>
 
-      <div class="faq">
-        <h2>FAQ</h2>
-        <details><summary>마진이 몇 %면 좋은 건가요?</summary><div class="a">일반적으로 낮을수록 유리합니다. 다만 종목/리그/시장(메인/핸디/OU)에 따라 평균이 다르니 상대 비교가 중요합니다.</div></details>
-<details><summary>EV가 플러스면 무조건 들어가도 되나요?</summary><div class="a">아니요. 확률 추정이 틀리면 EV도 의미가 없어집니다. 데이터/뉴스/라인 변동 근거를 확인한 뒤 ‘리스크 관리’와 함께 사용하세요.</div></details>
-<details><summary>마진 계산기 결과가 안 맞는 것 같아요.</summary><div class="a">배당 입력값(소수점, 쉼표 등)을 다시 확인하고, 3-way 경기에서 2-way로 넣지 않았는지 확인해 주세요.</div></details>
+      <div class="pills">
+        <div class="pill">마진(오버라운드)</div><div class="pill">EV(+EV)</div><div class="pill">2-way/3-way</div><div class="pill">무료 계산</div><div class="pill">라인 비교</div>
       </div>
 
-      <div class="foot">
-        ※ 본 페이지의 안내/도구 결과는 참고용이며, 최종 판단과 책임은 이용자에게 있습니다.<br>
-        빠른 이동: <a href="/analysis/" style="color:#78d6ff;text-decoration:none;font-weight:900;">분석기</a> ·
-        <a href="/#vendorTop" style="color:#f5e27a;text-decoration:none;font-weight:900;">88 인증 놀이터</a>
+      <div class="ctaRow">
+        <a class="btn primary" href="/analysis/" data-utm="1"
+           onclick="track('landing_cta_click',{landing:'c',cta:'analyzer'})">
+           무료 분석기 사용하기
+        </a>
+        <a class="btn secondary" href="/#vendorTop" data-utm="1"
+           onclick="track('landing_cta_click',{landing:'c',cta:'vendor'})">
+           88 인증놀이터 바로보기
+        </a>
+      </div>
+      <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
+    </div>
+
+    <div class="section">
+      <div class="title">핵심 요약</div>
+      <div class="content">배당은 단순 숫자가 아니라 ‘암묵적 확률(1/배당)’에 가깝습니다. 문제는 북메이커 마진(오버라운드) 때문에 그대로 확률로 쓰면 왜곡이 생긴다는 점이에요. 예를 들어 배당이 좋아 보이더라도 마진이 높으면 장기적으로 불리할 수 있습니다. 88 분석기는 배당을 입력하면 마진을 추정하고, 마진을 제거한 정규화 확률(참고)을 계산해 비교를 쉽게 만듭니다. 여기에 본인이 생각하는 확률(또는 시장 비교)을 기반으로 EV(+EV 여부)까지 확인할 수 있게 해두면, ‘감’이 아니라 ‘수치’로 판단하는 습관을 만들기 좋습니다. 초보는 2-way(승/패)부터, 축구는 3-way(홈/무/원정)로 입력해 보세요.</div>
+      <ul class="ul">
+        <li>마진(오버라운드)이 낮을수록 ‘가격’이 유리한 편</li><li>2-way: 농구/야구/핸디 등 승패 구조에 바로 사용</li><li>3-way: 축구 1X2(홈/무/원정) 확률 정규화에 적합</li><li>EV(+EV): 본인 추정 확률 대비 배당이 유리한지 체크(참고용)</li><li>히스토리/비교: 같은 경기 라인 변화를 기록하면 판단이 쉬워짐</li>
+      </ul>
+    </div>
+
+    <div class="section faq">
+      <div class="title">FAQ</div>
+      <details><summary>마진이 낮으면 무조건 이긴다는 뜻인가요?</summary><div class='a'>아니요. 마진은 ‘수수료’에 가깝습니다. <b>조건이 같다면</b> 마진이 낮은 쪽이 유리할 가능성이 큽니다.</div></details><details><summary>EV는 어떻게 쓰는 게 좋아요?</summary><div class='a'>EV는 참고 지표입니다. 본인 기준 확률이 필요하며, <b>라인 비교</b>나 <b>의사결정 보조</b>로 활용하는 것을 권장합니다.</div></details><details><summary>2-way/3-way를 언제 쓰나요?</summary><div class='a'>승패 구조(농구/야구 등)는 2-way, 1X2 구조(축구)는 3-way가 기본입니다.</div></details><details><summary>초보가 가장 많이 하는 실수는?</summary><div class='a'>한 번의 결과로 확신하는 것입니다. 같은 리그/시장 데이터를 <b>반복 기록</b>하며 체감하는 게 중요합니다.</div></details>
+    </div>
+
+    <div class="footer">
+      <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
+      <div class="smallLinks">
+        <a href="/landing-a/" data-utm="1" onclick="track('landing_cross',{from:'c',to:'a'})">입플·보너스</a>
+        <a href="/landing-b/" data-utm="1" onclick="track('landing_cross',{from:'c',to:'b'})">고액/보증업체</a>
+        <a href="/landing-c/" data-utm="1" onclick="track('landing_cross',{from:'c',to:'c'})">마진·EV</a>
+        <a href="/landing-d/" data-utm="1" onclick="track('landing_cross',{from:'c',to:'d'})">배당 흐름</a>
       </div>
     </div>
   </div>
