--- a/landing-d/index.html
+++ b/landing-d/index.html
@@ -1,89 +1,280 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>스포츠 배당 흐름 분석 가이드 | 88(팔팔커뮤니티)</title>
-  <meta name="description" content="배당 변동(라인 무브)의 대표 원인과 확인 순서, 그리고 88에서 배당 흐름을 체크하는 실전 팁을 정리했습니다.">
-  <meta name="keywords" content="배당흐름,라인무브,배당변동,분석,스포츠">
-  <link rel="canonical" href="https://88st.cloud/landing-d/">
-  <meta name="robots" content="index,follow">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>스포츠 배당 흐름(라인 변동) 해석 + 무료 배당 분석기 | 88</title>
+<meta name="description" content="배당 흐름(라인 변동)을 볼 때 체크할 포인트를 정리했습니다. 급변 구간, 마진 변화, 시장 과열 신호를 빠르게 확인하고 분석기로 즉시 계산하세요.">
+<link rel="canonical" href="https://88st.cloud/landing-d/">
+<meta name="robots" content="index,follow">
 
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)">
-  <meta property="og:title" content="스포츠 배당 흐름 분석 가이드 | 88(팔팔커뮤니티)">
-  <meta property="og:description" content="배당 변동(라인 무브)의 대표 원인과 확인 순서, 그리고 88에서 배당 흐름을 체크하는 실전 팁을 정리했습니다.">
-  <meta property="og:url" content="https://88st.cloud/landing-d/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="88 (팔팔커뮤니티)">
+<meta property="og:title" content="스포츠 배당 흐름(라인 변동) 해석 + 무료 배당 분석기 | 88">
+<meta property="og:description" content="배당 흐름(라인 변동)을 볼 때 체크할 포인트를 정리했습니다. 급변 구간, 마진 변화, 시장 과열 신호를 빠르게 확인하고 분석기로 즉시 계산하세요.">
+<meta property="og:url" content="https://88st.cloud/landing-d/">
 
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-  <style>
-    *{box-sizing:border-box}
-    :root{--bg:#0b0b0b;--panel:#121212;--gold:#d4af37;--gold2:#f5e27a;--muted:#cfcfcf}
-    body{
-      margin:0;
-      background:
-        radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
-        radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
-        linear-gradient(180deg, #07070a, var(--bg));
-      font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
-      color:#fff;
-    }
-    .wrap{max-width:920px;margin:0 auto;padding:18px 14px 28px}
-    .top{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
-    .brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:#fff}
-    .brand img{width:42px;height:42px;object-fit:contain;filter: drop-shadow(0 0 12px rgba(212,175,55,.22));}
-    .brand strong{font-weight:900}
-    .nav{display:flex;gap:10px;flex-wrap:wrap}
-    .btn{display:inline-block;padding:10px 12px;border-radius:12px;font-weight:900;text-decoration:none}
-    .btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-    .btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#0b0b0b}
-    .panel{margin-top:14px;background:rgba(18,18,18,.85);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.45);backdrop-filter: blur(10px);}
-    h1{margin:0 0 10px;font-size:20px;font-weight:900;color:var(--gold2);}
-    p{margin:10px 0;color:var(--muted);line-height:1.65;font-size:14px}
-    ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.65}
-    .faq{margin-top:14px}
-    .faq h2{margin:0 0 10px;font-size:14px;font-weight:900;color:var(--gold2)}
-    details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
-    details+details{margin-top:10px}
-    summary{cursor:pointer;font-weight:900;list-style:none}
-    summary::-webkit-details-marker{display:none}
-    .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
-    .foot{margin-top:18px;color:#9a9a9a;font-size:12px;line-height:1.55}
-  </style>
+<!-- GA4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+
+// ===== GA4 =====
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+
+// ===== UTM 저장/전파 =====
+function getUrlParams(){
+  const p = new URLSearchParams(location.search);
+  const obj = {};
+  ["utm_source","utm_medium","utm_campaign","utm_content","utm_term"].forEach(k=>{
+    const v = p.get(k);
+    if(v) obj[k]=v;
+  });
+  return obj;
+}
+function saveUtmFromUrl(){
+  const utm = getUrlParams();
+  const keys = Object.keys(utm);
+  if(!keys.length) return;
+  try{
+    localStorage.setItem("88_utm_last", JSON.stringify({...utm, ts: Date.now()}));
+  }catch(e){}
+}
+function getUtmQuery(){
+  try{
+    const raw = localStorage.getItem("88_utm_last");
+    if(!raw) return "";
+    const d = JSON.parse(raw);
+    const parts = [];
+    ["utm_source","utm_medium","utm_campaign","utm_content","utm_term"].forEach(k=>{
+      if(d && d[k]) parts.push(`${k}=${encodeURIComponent(d[k])}`);
+    });
+    return parts.length ? ("?" + parts.join("&")) : "";
+  }catch(e){ return ""; }
+}
+function appendUtm(href){
+  if(!href) return href;
+  // 외부링크 제외
+  if(/^https?:\/\//i.test(href)) return href;
+  // 앵커만 있는 경우
+  if(href.startsWith("#")) return href;
+  const q = getUtmQuery();
+  if(!q) return href;
+  // 이미 쿼리가 있으면 유지
+  if(href.includes("?")) return href;
+  // hash가 있으면 앞에 붙이기
+  const [path, hash] = href.split("#");
+  return path + q + (hash ? ("#" + hash) : "");
+}
+function bindUtmToLinks(){
+  document.querySelectorAll("a[data-utm='1']").forEach(a=>{
+    a.setAttribute("href", appendUtm(a.getAttribute("href")));
+  });
+}
+
+// ===== 이벤트 트래킹 =====
+function track(eventName, params){
+  try{
+    if(typeof gtag === "function") gtag("event", eventName, params || {});
+  }catch(e){}
+}
+
+saveUtmFromUrl();
+document.addEventListener("DOMContentLoaded", ()=>{
+  bindUtmToLinks();
+});
+
+gtag('js', new Date());
+gtag('config', 'G-KWT87FBY6S', { 'send_page_view': true });
+</script>
+
+<style>
+
+*{box-sizing:border-box;}
+:root{
+  --bg:#0b0b0b;
+  --panel:rgba(18,18,18,.88);
+  --gold:#d4af37;
+  --gold2:#f5e27a;
+  --muted:#cfcfcf;
+  --line:rgba(255,255,255,.08);
+}
+html{scroll-behavior:smooth;}
+body{
+  margin:0;
+  background:
+    radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
+    radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
+    linear-gradient(180deg, #07070a, var(--bg));
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+  color:#fff;
+}
+a{color:inherit;text-decoration:none;}
+.notice{
+  position:sticky; top:0; z-index:1000;
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#000; font-weight:900; font-size:13px;
+  padding:10px 12px; text-align:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+.wrap{max-width:980px;margin:0 auto;padding:16px 14px 36px;}
+.top{
+  display:flex; align-items:center; justify-content:space-between;
+  gap:12px; padding:10px 0 14px;
+}
+.brand{display:flex; align-items:center; gap:10px;}
+.brand img{width:46px;height:46px;object-fit:contain;filter:drop-shadow(0 0 12px rgba(212,175,55,.22));}
+.brand .t{font-weight:900; letter-spacing:.2px;}
+.nav{display:flex; gap:8px; flex-wrap:wrap; justify-content:flex-end;}
+.nav a{
+  font-size:12px; font-weight:900;
+  padding:8px 10px; border-radius:999px;
+  border:1px solid var(--line); background:rgba(0,0,0,.22);
+}
+.hero{
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:18px 16px;
+  box-shadow:0 10px 26px rgba(0,0,0,.45);
+  backdrop-filter: blur(10px);
+}
+.h1{margin:0; font-size:20px; font-weight:1000; line-height:1.25;}
+.sub{margin-top:8px; color:var(--muted); font-size:13px; line-height:1.6;}
+.pills{display:flex; flex-wrap:wrap; gap:8px; margin-top:12px;}
+.pill{
+  font-size:12px; font-weight:900;
+  padding:6px 10px; border-radius:999px;
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.22);
+  color:#f0f0f0;
+}
+.ctaRow{display:grid; gap:10px; margin-top:14px;}
+@media(min-width:720px){ .ctaRow{grid-template-columns:1fr 1fr;} }
+.btn{
+  display:block; text-align:center;
+  padding:14px 14px; border-radius:16px;
+  font-weight:1000; letter-spacing:.2px;
+  border:1px solid transparent;
+}
+.btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff); color:#00121a;}
+.btn.secondary{background:linear-gradient(135deg,var(--gold),var(--gold2)); color:#0b0b0b;}
+.note{margin-top:8px; font-size:12px; color:#a7a7a7; line-height:1.55;}
+.section{
+  margin-top:14px;
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:14px;
+  box-shadow:0 10px 26px rgba(0,0,0,.45);
+  backdrop-filter: blur(10px);
+}
+.title{
+  font-weight:1000;
+  font-size:14px;
+  color:var(--gold2);
+  margin:0 0 8px;
+}
+.content{
+  color:var(--muted);
+  font-size:13px;
+  line-height:1.65;
+}
+.ul{margin:10px 0 0; padding-left:18px; color:var(--muted); font-size:13px; line-height:1.65;}
+.faq details{
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.22);
+  border-radius:14px;
+  padding:10px 12px;
+}
+.faq details + details{margin-top:10px;}
+.faq summary{
+  cursor:pointer; font-weight:1000; color:#fff; list-style:none;
+}
+.faq summary::-webkit-details-marker{display:none;}
+.faq .a{margin-top:8px; color:#cfcfcf; font-size:13px; line-height:1.6;}
+.footer{
+  margin-top:16px;
+  color:#9a9a9a;
+  font-size:12px;
+  text-align:center;
+}
+.smallLinks{
+  margin-top:10px;
+  display:flex; flex-wrap:wrap; gap:8px; justify-content:center;
+}
+.smallLinks a{
+  font-size:11px; color:#9a9a9a;
+  padding:6px 8px; border-radius:10px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.06);
+}
+.smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
+
+</style>
 </head>
 <body>
+  <div class="notice">
+    <a href="/?from=landing-d" data-utm="1" onclick="track('landing_notice_click',{landing:'d'})">📈 배당 흐름 체크 → 급변/마진/확률을 무료 분석기에서 바로 확인</a>
+  </div>
+
   <div class="wrap">
     <div class="top">
-      <a class="brand" href="/" aria-label="88 메인으로 이동">
+      <div class="brand">
         <img src="/img/logo.png" alt="88 로고" loading="lazy" decoding="async">
-        <strong>88 (팔팔커뮤니티)</strong>
-      </a>
+        <div class="t">88st.cloud</div>
+      </div>
       <div class="nav">
-        <a class="btn primary" href="/analysis/">분석기 바로가기</a>
-        <a class="btn gold" href="/#vendorTop">인증놀이터 보기</a>
-        <a class="btn" style="background:rgba(255,255,255,.08);color:#fff;border:1px solid rgba(255,255,255,.10)" href="/">메인으로</a>
+        <a href="/" data-utm="1" onclick="track('landing_nav_home',{landing:'d'})">메인</a>
+        <a href="/analysis/" data-utm="1" onclick="track('landing_nav_analyzer',{landing:'d'})">분석기</a>
+        <a href="/#vendorTop" data-utm="1" onclick="track('landing_nav_vendor',{landing:'d'})">인증놀이터</a>
       </div>
     </div>
 
-    <div class="panel">
-      <h1>배당 흐름(라인 무브)을 읽는 기본 순서</h1>
-      <p>배당이 움직인다는 건 보통 ‘정보가 반영됐다’는 뜻입니다. 하지만 항상 정답은 아니고, 시장의 쏠림·조정·리스크 관리 목적의 라인 변경일 수도 있습니다. 그래서 ‘왜 움직였는지’ 원인을 먼저 찾는 게 핵심입니다.</p>
-<p>기본 순서는 ① 선발/결장/로테 뉴스 → ② 일정(백투백/원정 이동) → ③ 기상/구장/메타(종목별 변수) → ④ 마진/EV로 가격이 과한지 점검입니다. 이 순서를 습관화하면 ‘급변 라인’에서 실수를 줄일 수 있습니다.</p>
-<p>88 분석기는 배당/확률/마진/EV를 빠르게 확인하고, 인증 놀이터는 조건/문의 채널이 명확한 곳만 정리하는 방식으로 ‘체크 시간’을 줄이는 것을 목표로 합니다.</p>
+    <div class="hero">
+      <h1 class="h1">스포츠 배당 흐름(라인 변동) 해석 가이드</h1>
+      <div class="sub">라인이 움직이는 이유를 추정하고, 마진/확률을 같이 보면 불필요한 추격 배팅을 줄일 수 있습니다.</div>
 
-      <div class="faq">
-        <h2>FAQ</h2>
-        <details><summary>배당이 갑자기 내려가면 무조건 강팀인가요?</summary><div class="a">아니요. 정보 반영일 수도 있지만, 한쪽 쏠림을 완화하려는 조정일 수도 있습니다. 원인 확인이 먼저입니다.</div></details>
-<details><summary>초반에만 움직이고 다시 돌아오는 경우는요?</summary><div class="a">초기 물량/조정 이후 재평가가 들어간 케이스일 수 있습니다. 변동 구간(시간대)과 뉴스 타이밍을 같이 보세요.</div></details>
-<details><summary>어떤 시장이 흐름 파악에 더 좋아요?</summary><div class="a">경기 성격에 따라 다르지만, 메인 승패/핸디/OU 중 ‘가장 유동성이 큰 시장’이 먼저 움직이는 경우가 많습니다.</div></details>
+      <div class="pills">
+        <div class="pill">라인 변동</div><div class="pill">급변 구간</div><div class="pill">시장 과열</div><div class="pill">마진 변화</div><div class="pill">분석기 연동</div>
       </div>
 
-      <div class="foot">
-        ※ 본 페이지의 안내/도구 결과는 참고용이며, 최종 판단과 책임은 이용자에게 있습니다.<br>
-        빠른 이동: <a href="/analysis/" style="color:#78d6ff;text-decoration:none;font-weight:900;">분석기</a> ·
-        <a href="/#vendorTop" style="color:#f5e27a;text-decoration:none;font-weight:900;">88 인증 놀이터</a>
+      <div class="ctaRow">
+        <a class="btn primary" href="/analysis/" data-utm="1"
+           onclick="track('landing_cta_click',{landing:'d',cta:'analyzer'})">
+           무료 분석기 사용하기
+        </a>
+        <a class="btn secondary" href="/#vendorTop" data-utm="1"
+           onclick="track('landing_cta_click',{landing:'d',cta:'vendor'})">
+           88 인증놀이터 바로보기
+        </a>
+      </div>
+      <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
+    </div>
+
+    <div class="section">
+      <div class="title">핵심 요약</div>
+      <div class="content">배당 흐름(라인 변동)은 ‘정보 반영’과 ‘시장 심리’가 동시에 섞여 움직입니다. 그래서 단순히 오르고 내림만 보면 오해하기 쉽습니다. 핵심은 <b>변동의 속도</b>와 <b>마진 변화</b>를 같이 보는 것: 짧은 시간 급변은 라인 조정/뉴스 반영일 수 있고, 마진이 함께 올라가면 시장이 불안하거나 가격이 ‘비싸졌을’ 가능성이 있습니다. 88은 이런 구간을 체크할 때 무료 분석기에서 확률·마진·EV를 즉시 계산해 왜곡 가능성을 줄이는 흐름으로 구성했습니다. 경기 전후로 같은 시장을 시간대별로 비교 기록하면, 위험한 구간(과열/불확실)을 더 빨리 피할 수 있고 반대로 ‘가격이 좋은’ 타이밍도 더 명확히 잡을 수 있습니다.</div>
+      <ul class="ul">
+        <li>급변 구간: 짧은 시간에 큰 변동이면 뉴스/라인조정 가능성</li><li>마진 변화: 시장이 불안하면 마진이 높아지는 경우가 있음</li><li>종목 특성: 축구(무/언더)·농구(스프레드/OU) 등 체크 포인트 다름</li><li>기록 습관: 같은 경기/라인을 시간대별로 저장하면 판단이 쉬움</li><li>최종 확인: 메인에서 검증 카드/문의 채널로 조건까지 재확인</li>
+      </ul>
+    </div>
+
+    <div class="section faq">
+      <div class="title">FAQ</div>
+      <details><summary>라인이 내려가면 ‘정답’인가요?</summary><div class='a'>아니요. 라인은 정보·심리·조정이 섞입니다. 변동 이유를 추정하고, 마진/확률을 함께 보세요.</div></details><details><summary>과열 신호는 어떻게 보나요?</summary><div class='a'>동일 시장에서 <b>짧은 시간 급변</b>, <b>마진 상승</b>, <b>반대 방향 재조정</b>이 반복되면 보수적으로 접근하는 게 좋습니다.</div></details><details><summary>어떤 종목이 라인 변동이 큰 편인가요?</summary><div class='a'>리그/시장에 따라 다르지만, 정보 비대칭이 큰 구간(선발/결장 등)에서 변동이 커질 수 있습니다.</div></details><details><summary>분석기에서 바로 뭘 보면 되나요?</summary><div class='a'>배당 입력 후 <b>마진</b>과 <b>정규화 확률</b>을 먼저 확인하고, 필요하면 EV까지 참고하세요.</div></details>
+    </div>
+
+    <div class="footer">
+      <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
+      <div class="smallLinks">
+        <a href="/landing-a/" data-utm="1" onclick="track('landing_cross',{from:'d',to:'a'})">입플·보너스</a>
+        <a href="/landing-b/" data-utm="1" onclick="track('landing_cross',{from:'d',to:'b'})">고액/보증업체</a>
+        <a href="/landing-c/" data-utm="1" onclick="track('landing_cross',{from:'d',to:'c'})">마진·EV</a>
+        <a href="/landing-d/" data-utm="1" onclick="track('landing_cross',{from:'d',to:'d'})">배당 흐름</a>
       </div>
     </div>
   </div>
